[package]
name = "open-api-codegen"
version = "1.1.4"
edition = "2021"

[profile.release]
lto = "fat"
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
lazy_static = "1.4.0"
clap = { version = "4.0.27", features = ["derive"] }
log = "0.4.0"
env_logger = "0.10.0"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }